# asteroids

./: .gitignore  .main  CMakeLists.txt  exe.sh  main.cpp
entities/asteroid/: asteroid.cpp  asteroid.h
entities/entity/: .main  entity.cpp  entity.h
entities/player/: player.cpp  player.h
include/entities/: asteroid.h  entity.h  player.h
include/rendering/: shape.h
rendering/: .main
rendering/buffers/ebo/: ebo.cpp
rendering/buffers/vao/: vao.cpp
rendering/buffers/vbo/: vbo.cpp
rendering/shader/: shader.cpp  shader_parser.h
rendering/shape/: shape.cpp  shape.h
shaders/: fragment.shader  vertex.shader
src/entities/: asteroid.cpp  entity.cpp  player.cpp
src/rendering/: shape.cpp
src/rendering/buffers/: ebo.cpp  vao.cpp  vbo.cpp
src/rendering/shader/: shader.cpp  shader_parser.cpp
src/rendering/textures/: stb_image.cpp
